--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,10 @@
 * {
   box-sizing: border-box;
 }
+html{
+  height:100%;
 
+}
 body {
   margin: 0;
   font-family: "Hiragino Kaku Gothic ProN", sans-serif;
@@ -128,4 +131,52 @@ input,textarea{
   width:500px;
   display: block;
   margin:0 auto;
+}
+/*portfolio*/
+.Portfolio{
+  width:100%;
+}
+.PortfolioTitle{
+  display:block;
+  width:500px;
+  margin:70px auto 0 auto;
+  text-align: center;
+}
+.Web{
+  width:100%;
+}
+.WebSite{
+  display:block;
+  margin:0 auto;
+  width:25%;
+  border:solid 1px black;
+  text-align: center;
+  float:left;
+  height:200px;
+}
+.WebSite img{
+  width:100px;
+  height:100px;
+}
+/*Photo*/
+.PhotoGllary{
+  width:100%;
+  padding-top:20px;
+  text-align: center;
+
+  position: relative;
+}
+.Photo{
+  display: block;
+  width:100%;
+  height:200px;
+  margin:10px auto;
+  text-align: center;
+  position:absolute;
+  background-color:white;;
+}
+.Photo img{
+  width:500px;
+  height:400px;
+
 }
