--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,11 +169,11 @@ input,textarea{
 .Photo{
   display: block;
   width:100%;
-  height:200px;
+  height:1200px;
   margin:10px auto;
   text-align: center;
   position:absolute;
-  background-color:white;;
+  background-color:white;
 }
 .Photo img{
   width:500px;
