--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,9 +31,10 @@ z-index: 10;
 .header-left p{
   font-size:20px;
   color:white;
-  font-family:sans-serif;
+  font-family:'HG行書体'	;
   position:absolute;
   top:0;
+
 }
 .header-left{
 width:100px;
@@ -163,7 +164,6 @@ input,textarea{
   width:100%;
   padding-top:20px;
   text-align: center;
-
   position: relative;
 }
 .Photo{
