--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ z-index: 10;
 .header-left p{
   font-size:20px;
   color:white;
-  font-family:'HG行書体';
+  font-family:'Impact';
   position:absolute;
   top:0;
 
