--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,6 @@
 }
 html{
   height:100%;
-
 }
 body {
   margin: 0;
@@ -31,7 +30,7 @@ z-index: 10;
 .header-left p{
   font-size:20px;
   color:white;
-  font-family:'Impact';
+  font-family:'HG行書体'	;
   position:absolute;
   top:0;
 
@@ -179,4 +178,90 @@ input,textarea{
   width:500px;
   height:400px;
 
+}
+/*スマホ用*/
+@media(max-width:750px){
+
+header{
+  height: 55px;
+width: 380px;
+background-color: rgba(34, 49, 52, 0.9);
+position :fixed;
+top: 0;
+z-index: 10;
+
+}
+.container{
+   width: 100%;
+
+  }
+  .header-left p{
+    font-size:20px;
+    color:white;
+    font-family:'HG行書体'	;
+    position:absolute;
+    top:0;
+
+  }
+  .header-left{
+  width:50px;
+  height:40px;
+  position:absolute;
+  top:0;
+  }
+  .A{
+    line-height: 65px;
+    color: white;
+    display: block;
+    float: left;
+    transition: all 0.5s;
+    color:white;
+  }
+  .header-right{
+    float: right;
+      margin-right: -25px;
+}
+.main p{
+
+  position:absolute; /* 絶対配置 */
+	/* 左から半分 */
+	width:100%; /* 大枠と同じ幅に */
+text-align: center;
+top:160px;
+font-size:30px;
+}
+/*ポートフォリオ*/
+.PortfolioTitle{
+  display:block;
+  width:300px;
+  margin:70px auto 0 auto;
+  text-align: center;
+}
+.WebSite{
+  display:block;
+  margin:0 auto;
+  width:100%;
+  border:solid 1px black;
+  text-align: center;
+  height:200px;
+}
+.WebSite img{
+  width:80%;
+  height:70%;
+text-align: center;
+}
+.Photo img{
+  width:100%;
+  height:300px;
+
+}
+/*contact*/
+.C{
+  width:100%;
+  text-align: center;
+}
+input,textarea{
+  display:block;
+  width: 100%;
+}
 }
